--- a/nooe.css
+++ b/nooe.css
@@ -1,4 +1,4 @@
-﻿#header1 {
+#header1 {
 color: white;
 text-align: center;
 text-shadow: 5px 2px black;
@@ -49,7 +49,9 @@ width: 33%;
   background-color: #4444dd;
 
 }
-
+aside{
+float: right;
+}
 #eggtext {
 color: white;
 text-shadow: 1px 100px green;
